--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "repository": {
     "type": "git",
