--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "gatsby": "^5.14.0",
+    "gatsby-plugin-env-variables": "^2.3.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
     "gatsby-plugin-sass": "^6.14.0",
@@ -23,6 +24,7 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "google-map-react": "^2.2.1",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
