--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-tooltip": "^5.28.0",
     "sass": "^1.81.0",
     "swiper": "^11.1.15"
   },
