--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-tooltip": "^5.28.0",
     "sass": "^1.81.0",
